Help message on support page

--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -58,7 +58,7 @@
         <p>CovidConnect Support Box</p>
         <div style="text-align:center">
           <h2>Contact Us</h2>
-          <p>Any issues or queries feel free to leave us a message:</p>
+          <p>Please fill out the form bellow, Once you click submit you will be taken to your email where you can make any changes to your request then simply click send and our team will be back to you in no time with support!</p>
         </div>
         <div class="row">
           <div class="column">
