Link to privacy policy

--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -107,6 +107,7 @@
         </div>
         <div class="side">
           <p>Privacy Policy</p>
+          <li><a href="https://www.lipsum.com/privacy.pdf">Link to our Privacy Policy</a></li>
         </div>
       </div>
     </div>
