--- a/Webpages/chat.html
+++ b/Webpages/chat.html
@@ -10,7 +10,6 @@
   <link href="../app.css" rel="stylesheet">
   <script src="../script.js"></script>
   <script type="text/javascript" src="http://cdn.icecomm.io/icecomm.js"></script>
-  <meta name="simplewebrtc-config-url" content="https://api.simplewebrtc.com/config/guest/cd3a42254928ee8287b1ac1e" />
 </head>
 
 <body>
@@ -35,9 +34,6 @@
   <body id="body">
     <div class="header">
       <div class="container">
-        <div class="logo">
-          <a href="./"><img src="../img/logo.png" width="75px" alt="Omigo"></a>
-        </div>
         <button class="btn green" type="button" name="action" id="control" data-current="start">start</button>
         <div class="online-count">
           <strong>x</strong> online now
@@ -63,8 +59,8 @@
               <p class="syslog"><strong>Hi, welcome to <span class="special">Covid Connect</span>!</strong></p>
               <p></p>
               <p></p>
-              <p class="syslog"><strong>Covid Connect</strong> (oh·me·goal) is a great way to meet new friends.</p>
-              <p class="syslog">When you use omigo, we pick someone else at random and let you talk one-on-one.</p>
+              <p class="syslog"><strong>Covid Connect</strong> is a great way to meet new friends.</p>
+              <p class="syslog">When you use Covid Connect, we pick someone else at random and let you talk one-on-one.</p>
               <p class="syslog">To help you stay safe, chats are anonymous unless you tell someone who you are (not suggested!),</p>
               <p class="syslog">and you can stop a chat at any time.</p>
               <p class="syslog">If you can't be nice, please don't use omigo.</p>
