Added Privacy logo to support page

--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -108,6 +108,7 @@
         <div class="side">
           <p>Privacy Policy</p>
           <li><a href="https://www.lipsum.com/privacy.pdf">Link to our Privacy Policy</a></li>
+          <img src="../Imgs/privacy-logo.jpg" width="100" height="100" style="float:right">
         </div>
       </div>
     </div>
