--- a/Webpages/home.html
+++ b/Webpages/home.html
@@ -59,7 +59,7 @@
           <a href="tel:(086) 216 3521">(086) 216 3521</a>
           <br>
           <abbr title="Email">E:</abbr>
-          <a href="mailto:#">covidconnect@covidconnect.com</a>
+          <a href="mailto:#">covidconnect@hotmail.com</a>
         </address>
       </div>
     </div>
