--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -52,126 +52,124 @@
         <p id="bio"></p>
       </div>
       <div class="row content">
-          <div class="col-md-12">
-            <hr>
-            <h1> Prefences </h1>
+        <div class="col-md-12">
+          <hr>
+          <h1> Prefences </h1>
+        </div>
+        <div class="col-sm-4">
+          <div id="Prep-Design">
+            <form action="">
+              <p>Please select your gender:</p>
+              <input type="checkbox" id="male" name="gender" value="male">
+              <label for="male">Male</label><br>
+              <input type="checkbox" id="female" name="gender" value="female">
+              <label for="female">Female</label><br>
+              <input type="checkbox" id="other" name="gender" value="other">
+              <label for="other">Other</label>
+
+              <br>
+
+              <p>Please select your age:</p>
+              <input type="checkbox" id="age1" name="age" value="30">
+              <label for="age1">0 - 30</label><br>
+              <input type="checkbox" id="age2" name="age" value="60">
+              <label for="age2">31 - 60</label><br>
+              <input type="checkbox" id="age3" name="age" value="100">
+              <label for="age3">61 - 100</label><br><br>
+              </fo rm>
           </div>
-          <div class="col-sm-4">
-            <div id="Prep-Design">
-            <form action="/action_page.php">
-            <p>Please select your gender:</p>
-            <input type="checkbox" id="male" name="gender" value="male">
-            <label for="male">Male</label><br>
-            <input type="checkbox" id="female" name="gender" value="female">
-            <label for="female">Female</label><br>
-            <input type="checkbox" id="other" name="gender" value="other">
-            <label for="other">Other</label>
+        </div>
+        <div class="col-sm-4">
+          <div id="Prep-Design">
+            <form action="">
+              <p>What Colour are you feeling today</p>
+              <input type="checkbox" id="Blue" name="Blue" value="Blue">
+              <label for="star1">Blue - Sad</label><br>
 
-            <br>
+              <input type="checkbox" id="Green" name="Green" value="Green">
+              <label for="star1">Green - Fresh</label><br>
 
-            <p>Please select your age:</p>
-            <input type="checkbox" id="age1" name="age" value="30">
-            <label for="age1">0 - 30</label><br>
-            <input type="checkbox" id="age2" name="age" value="60">
-            <label for="age2">31 - 60</label><br>
-            <input type="checkbox" id="age3" name="age" value="100">
-            <label for="age3">61 - 100</label><br><br>
+              <input type="checkbox" id="Yellow" name="Yellow" value="Yellow">
+              <label for="star1">Yellow - Happy</label><br>
+
+              <input type="checkbox" id="Purple" name="Purple" value="Purple">
+              <label for="star1">Purple - Loyal</label><br>
+
+              <input type="checkbox" id="Red" name="Red" value="Red">
+              <label for="star1">Red - Loved </label><br>
+
+              <input type="checkbox" id="Pink" name="Pink" value="Pink">
+              <label for="star1">Pink - Caring</label><br>
+
+              <input type="checkbox" id="Orange" name="Orange" value="Orange">
+              <label for="star1">Orange - confidence</label><br>
+
+              <br>
+
+              <p>How Active will you be today:</p>
+              <input type="checkbox" id="Very" name="very" value="very">
+              <label for="very">Extremely active</label><br>
+
+              <input type="checkbox" id="little" name="little" value="little">
+              <label for="very">A little active</label><br>
+
+              <input type="Checkbox" id="Lazy" name="Lazy" value="Lazy">
+              <label for="Lazy">Lazy-day today</label><br><br>
             </form>
           </div>
         </div>
 
         <div class="col-sm-4">
           <div id="Prep-Design">
-          <form action="/action_page.php">
-          <p>What Colour are you feeling today</p>
-          <input type="checkbox" id="Blue" name="Blue" value="Blue">
-          <label for="star1">Blue - Sad</label><br>
+            <form action="">
+              <p>Please select your Star Sign:</p>
+              <select name="starSign" id="starSign">
+                <option value="Capricorn">Capricorn</option>
+                <option value="Aquarius">Aquarius</option>
+                <option value="Pisces">Pisces</option>
+                <option value="Aries">Aries</option>
+                <option value="Taurus">Taurus</option>
+                <option value="Gemini">Gemini</option>
+                <option value="Cancer">Cancer</option>
+                <option value="Leo">Leo</option>
+                <option value="Virgo">Virgo</option>
+                <option value="Libra">Libra</option>
+                <option value="Scorpio">Scorpio</option>
+                <option value="Ophiuchus">Ophiuchus</option>
+                <option value="Sagittarius">Sagittarius</option>
+              </select>
 
-          <input type="checkbox" id="Green" name="Green" value="Green">
-          <label for="star1">Green - Fresh</label><br>
+              <br>
 
-          <input type="checkbox" id="Yellow" name="Yellow" value="Yellow">
-          <label for="star1">Yellow - Happy</label><br>
-
-          <input type="checkbox" id="Purple" name="Purple" value="Purple">
-          <label for="star1">Purple - Loyal</label><br>
-
-          <input type="checkbox" id="Red" name="Red" value="Red">
-          <label for="star1">Red - Loved </label><br>
-
-          <input type="checkbox" id="Pink" name="Pink" value="Pink">
-          <label for="star1">Pink - Caring</label><br>
-
-          <input type="checkbox" id="Orange" name="Orange" value="Orange">
-          <label for="star1">Orange - confidence</label><br>
-
-          <br>
-
-          <p>How Active will you be today:</p>
-          <input type="checkbox" id="Very" name="very" value="very">
-          <label for="very">Extremely active</label><br>
-
-          <input type="checkbox" id="little" name="little" value="little">
-          <label for="very">A little active</label><br>
-
-          <input type="Checkbox" id="Lazy" name="Lazy" value="Lazy">
-          <label for="Lazy">Lazy-day today</label><br><br>
-          </form>
+              <form action="">
+                <p>Please select your hobbies</p>
+                <input type="checkbox" id="Bingo" name="hobby" value="Bingo">
+                <label for="Bingo">Bingo</label><br>
+                <input type="checkbox" id="PS4" name="hobby" value="PS4">
+                <label for="PS4">PS4</label><br>
+                <input type="checkbox" id="XBox" name="hobby" value="XBox">
+                <label for="XBox">XBox</label><br>
+                <input type="checkbox" id="Suduko" name="hobby" value="Suduko">
+                <label for="Suduko">Suduko</label><br>
+                <input type="checkbox" id="Football" name="hobby" value="Football">
+                <label for="Football">Football</label><br>
+                <input type="checkbox" id="Walking" name="hobby" value="Walking">
+                <label for="Walking">Walking</label>
+                <input type="checkbox" id="Knitting" name="hobby" value="Knitting">
+                <label for="Knitting">Knitting</label><br>
+                <input type="checkbox" id="watchingtv" name="hobby" value="watchingtv">
+                <label for="watchingtv">Watching TV</label><br>
+                <input type="checkbox" id="other" name="hobby" value="other">
+                <label for="other">Other</label>
+              </form>
+          </div>
         </div>
       </div>
-
-      <div class="col-sm-4">
-        <div id="Prep-Design">
-        <form action="/action_page.php">
-        <p>Please select your Star Sign:</p>
-        <input type="checkbox" id="star1" name="star1" value="Capricorn">
-        <label for="star1">Capricorn</label><br>
-
-        <input type="checkbox" id="star2" name="star2" value="Aquarius">
-        <label for="star2">Aquarius</label><br>
-
-        <input type="checkbox" id="star3" name="star3" value="Pisces">
-        <label for="star3">Pisces</label><br>
-
-        <input type="checkbox" id="star4" name="star4" value="Aries">
-        <label for="star4">Aries</label><br>
-
-        <input type="checkbox" id="star5" name="star5" value="Tauras">
-        <label for="star5">Taurus</label><br>
-
-        <input type="checkbox" id="star6" name="star6" value="Gemini">
-        <label for="star6">Gemini</label><br>
-
-        <input type="checkbox" id="star7" name="star7" value="Cancer">
-        <label for="star7">Cancer</label><br>
-
-        <input type="checkbox" id="star8" name="star8" value="Leo">
-        <label for="star8">Leo</label><br>
-
-        <input type="checkbox" id="star9" name="star9" value="Virgo">
-        <label for="star9">Virgo</label><br>
-
-        <input type="checkbox" id="star10" name="star10" value="Libra">
-        <label for="star10">Libra</label><br>
-
-        <input type="checkbox" id="star11" name="star11" value="Scorpio">
-        <label for="star11">Scorpio</label><br>
-
-        <input type="checkbox" id="star12" name="star12" value="Ophiuchus">
-        <label for="star11">Ophiuchus</label><br>
-
-        <input type="checkbox" id="star13" name="star13" value="Sagittarius">
-        <label for="star13">Sagittarius</label><br>
-        <br>
-        </form>
-      </div>
     </div>
-
-
-    <footer class="container-fluid text-center">
-      <p>Covid Connect Footer</p>
-    </footer>
-
+  </div>
+        <footer class="container-fluid text-center">
+          <p>Covid Connect Footer</p>
+        </footer>
 </body>
 
 </html>
