--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -40,14 +40,14 @@
 
     <hr>
 
-    <h1= onclick="displayText()" class="pulsate" style="color:red" => We're Here to Help!</h1>
-    <div id="targetDiv"></div>
+    <h1= onclick="displayText()" class="pulsate" style="color:red; text-align:center;"=> We're Here to Help!</h1>
+      <div id="targetDiv"></div>
 
-    <script type="text/javascript">
-      function displayText() {
-        document.getElementById("targetDiv").innerHTML = "Browse Our Help Topics!";
-      }
-    </script>
+      <script type="text/javascript">
+        function displayText() {
+          document.getElementById("targetDiv").innerHTML = "Browse Our Help Topics!";
+        }
+      </script>
 
   </div>
 
@@ -68,7 +68,7 @@
               <label for="fname">First Name</label>
               <input type="text" id="fname" name="firstname" placeholder="Your name.." style="width: 100%; margin-top: 6px; margin-bottom: 16px;">
               <label for="lname">Last Name</label>
-              <input type="text" id="lname" name="lastname" placeholder="Your last name.."  style="width: 100%; margin-top: 6px; margin-bottom: 16px;">
+              <input type="text" id="lname" name="lastname" placeholder="Your last name.." style="width: 100%; margin-top: 6px; margin-bottom: 16px;">
               <label for="country">Country</label>
               <select id="country" name="country">
                 <option value="australia">Ireland</option>
@@ -80,7 +80,7 @@
               <br>
               <br>
               <label for="subject">Subject</label>
-              <textarea id="subject" name="subject" placeholder="Write something.."  style="width: 100%; margin-top: 6px; margin-bottom: 16px;"></textarea>
+              <textarea id="subject" name="subject" placeholder="Write something.." style="width: 100%; margin-top: 6px; margin-bottom: 16px;"></textarea>
               <input type="submit" value="Submit">
             </form>
           </div>
@@ -89,23 +89,24 @@
       </div>
       <div id="midright">
         <div class="side">
-          <p>Link to Settings Page</p>
+          <h4 style="text-align:center;">Link to Settings Page</h4>
           <li><a href="settings.html">Settings</a></li>
           <img src="../Imgs/SettingsCogCC.png" width="100" height="100" style="float:right">
         </div>
         <div class="side">
-          <p>Meet the team !</p>
+          <h4 style="text-align:center;">Meet the team !</h4>
           <p>Tegan, Luke, Oisin, Sean and Emanuel</p>
-          <p>We are 5 students studying computing in the National College Ireland (NCI), we all beleive and understand the issue of loneliness as a result of the COVID-19 pandemic we hope our application can grant the opportunity for users to connect and communicate in a safe environment. </p>
+          <p>We are 5 students studying computing in the National College Ireland (NCI), we all beleive and understand the issue of loneliness as a result of the COVID-19 pandemic we hope our application can grant the opportunity for users to connect
+            and communicate in a safe environment. </p>
         </div>
         <div class="side">
-          <p>Online Safety</p>
+          <h4 style="text-align:center;">Online Safety</h4>
           <p>Remember to always be safe online, even in a controlled environment like Covid Connect users may seak information about you that you should always keep to youself!</p>
           <p>Please read the link bellow to ensure you are being safe while using our site</p>
           <a href="https://young.scot/get-informed/national/seven-tips-for-staying-safe-when-chatting-online">Click me!</a>
         </div>
         <div class="side">
-          <p>Privacy Policy</p>
+          <p style="text-align:center;">Privacy Policy</p>
           <li><a href="https://www.lipsum.com/privacy.pdf">Link to our Privacy Policy</a></li>
           <img src="../Imgs/privacy-logo.jpg" width="100" height="100" style="float:right">
         </div>
