--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -21,8 +21,7 @@
       background-color: #FFF;
     }
     #send-container {
-      position: fixed;
-      padding-bottom: 30px;
+      padding-bottom: 20%;
       bottom: 0;
       background-color: white;
       max-width: 1200px;
