--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -16,6 +16,8 @@
     #message-container div {
       background-color: #CCC;
       padding: 5px;
+      height:60%;
+      float: left;
     }
     #message-container div:nth-child(2n) {
       background-color: #FFF;
