--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -153,6 +153,8 @@
                 <label for="Suduko">Suduko</label><br>
                 <input type="checkbox" id="Football" name="hobby" value="Football">
                 <label for="Football">Football</label><br>
+                <input type="checkbox" id="Rugby" name="hobby" value="Rugby">
+                <label for="Rugby">Rugby</label><br>
                 <input type="checkbox" id="Walking" name="hobby" value="Walking">
                 <label for="Walking">Walking</label>
                 <input type="checkbox" id="Knitting" name="hobby" value="Knitting">
