--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -70,12 +70,12 @@
               <br>
 
               <p>Please select your age:</p>
-              <input type="checkbox" id="age1" name="age" value="30">
-              <label for="age1">0 - 30</label><br>
-              <input type="checkbox" id="age2" name="age" value="60">
-              <label for="age2">31 - 60</label><br>
-              <input type="checkbox" id="age3" name="age" value="100">
-              <label for="age3">61 - 100</label><br><br>
+              <input type="checkbox" id="age1" name="age" value="20">
+              <label for="age1">0 - 20</label><br>
+              <input type="checkbox" id="age2" name="age" value="25">
+              <label for="age2">20 - 50</label><br>
+              <input type="checkbox" id="age3" name="age" value="30">
+              <label for="age3">50 - over</label><br><br>
               </fo rm>
           </div>
         </div>
