--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -75,7 +75,7 @@
               <input type="checkbox" id="age2" name="age" value="25">
               <label for="age2">20 - 50</label><br>
               <input type="checkbox" id="age3" name="age" value="30">
-              <label for="age3">50 - over</label><br><br>
+              <label for="age3">50 - Over</label><br><br>
               </fo rm>
           </div>
         </div>
