--- a/Webpages/individualchat.html
+++ b/Webpages/individualchat.html
@@ -26,26 +26,14 @@ Talk.ready.then(function() {
         appId: "tV6gHbbq",
         me: me
     });
-
-    <?php $user = $database.getUser(11); ?>
-var other = new Talk.User(
-    <?php echo json_encode(array(
-        "id" => strval($users->idusers),
-        "name" => $users->username,
-        "email" => $users->Email,
-        //"photoUrl" => $user->photoUrl,
-        //"welcomeMessage" => "Hey, let's have a chat!"
-    )); ?>
-);
-/*
-        var other = new Talk.User({
-        id: "11",
-        name: "testuser",
-        email: "testuser@email.com",
+    var other = new Talk.User({
+        id: "654321",
+        name: "Sebastian",
+        email: "Sebastian@example.com",
         photoUrl: "https://demo.talkjs.com/img/sebastian.jpg",
         welcomeMessage: "Hey, how can I help?"
     });
-*/
+
     var conversation = talkSession.getOrCreateConversation(Talk.oneOnOneId(me, other))
     conversation.setParticipant(me);
     conversation.setParticipant(other);
