Header change support page

--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -106,7 +106,7 @@
           <a href="https://young.scot/get-informed/national/seven-tips-for-staying-safe-when-chatting-online">Click me!</a>
         </div>
         <div class="side">
-          <p style="text-align:center;">Privacy Policy</p>
+          <h4 style="text-align:center;">Privacy Policy</h4>
           <li><a href="https://www.lipsum.com/privacy.pdf">Link to our Privacy Policy</a></li>
           <img src="../Imgs/privacy-logo.jpg" width="100" height="100" style="float:right">
         </div>
