--- a/Webpages/individualchat.html
+++ b/Webpages/individualchat.html
@@ -26,14 +26,25 @@ Talk.ready.then(function() {
         appId: "tV6gHbbq",
         me: me
     });
-    var other = new Talk.User({
+    <?php $user = $database.getUser(11); ?>
+    var other = new Talk.User(
+        <?php echo json_encode(array(
+            "id" => strval($user->idusers),
+            "name" => $user->username,
+            "email" => $user->Email,
+            //"photoUrl" => $user->photoUrl,
+            //"welcomeMessage" => "Hey, let's have a chat!"
+        )); ?>
+    );
+
+  /*  var other = new Talk.User({
         id: "6543210",
         name: "Sebastian",
         email: "Sebastian@example.com",
         photoUrl: "https://demo.talkjs.com/img/sebastian.jpg",
         welcomeMessage: "Hey, how can I help?"
     });
-
+*/
     var conversation = talkSession.getOrCreateConversation(Talk.oneOnOneId(me, other))
     conversation.setParticipant(me);
     conversation.setParticipant(other);
@@ -76,6 +87,7 @@ Talk.ready.then(function() {
   <header>
     <img id="homepagebanner" src="../Imgs/bgchat.jpg" alt="Background">
   </header>
+
 
 
   <!-- container element in which TalkJS will display a chat UI -->
