retesting new user indiv chat 6

--- a/Webpages/individualchat.html
+++ b/Webpages/individualchat.html
@@ -29,11 +29,11 @@ Talk.ready.then(function() {
 
 
   var other = new Talk.User({
-        id: "6543210",
-        name: "Sebastian",
-        email: "Sebastian@example.com",
-        photoUrl: "https://demo.talkjs.com/img/sebastian.jpg",
-        welcomeMessage: "Hey, how can I help?"
+        id: "44",
+        name: "James",
+        email: "James@example.com",
+        photoUrl: "https://i.pinimg.com/736x/12/36/56/12365697bcda9fa464044f5e82c730ed.jpg",
+        welcomeMessage: "Hey, how are you?"
     });
 
     var conversation = talkSession.getOrCreateConversation(Talk.oneOnOneId(me, other))
