--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -68,7 +68,7 @@
   <form id="send-container">
     <input type="text" id="message-input">
     <button type="submit" id="send-button">Send</button>
-    <button><a href="ratings.html">Next</a></button>
+    <button><a href="rating.html">Next</a></button>
 
   </form>
 </body>
