--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -34,7 +34,6 @@
   <header>
     <img id="homepagebanner" src="../Imgs/bgchatroulette.jpg" alt="Background">
   </header>
-
   <div class="container-fluid height-fill">
     <div class="row height-fill pos-middle">
       <div id="video_container" class="col-xs-2"></div>
@@ -55,9 +54,9 @@
     <div class="row pos-bottom">
       <div id="video_container" class="col-xs-2"></div>
       <div class="col-xs-8">
-        <textarea id="message" rows="3" name="message" style="width:80%;"> </textarea>
+        <textarea id="message" rows="3" name="message" style="width:80%;"></textarea>
       </div>
-      <div id="button_container" class="col-xs-1" style="float:left;">
+      <div id="button_container" class="col-xs-1" style="margin: 0 auto;">
         <a class="btn btn-block btn-success" id="next_btn" title="Send Message">
           <span class="shortcut">Send</span>
         </a>
